--- a/index.html
+++ b/index.html
@@ -10,213 +10,7 @@
     href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Sacramento&display=swap"
     rel="stylesheet">
   <title>My Portofolio</title>
-  <style>
-    body {
-      color: #40514e;
-      margin: 0;
-      text-align: center;
-      font-family: "Merriweather", serif;
-    }
-
-    h1 {
-      color: #66bfbf;
-      font-size: 5.625rem;
-      margin: 50px auto 0 auto;
-      font-family: "Sacramento", cursive;
-    }
-
-    h2 {
-      color: #66bfbf;
-      font-family: "Montserrat", sans-serif;
-      font-size: 2.5rem;
-      font-weight: normal;
-      padding-bottom: 10px;
-    }
-
-    h3 {
-      color: #11999e;
-      font-family: "Montserrat", sans-serif;
-    }
-
-    p {
-      line-height: 2;
-    }
-
-    /* hr {
-      border: dotted #eaf6f6 6px;
-      border-bottom: none;
-      width: 4%;
-      margin: 100px auto;
-    } */
-
-    a {
-      color: #11999e;
-      font-family: "Montserrat", sans-serif;
-      margin: 10px 20px;
-      text-decoration: none;
-    }
-
-    a:hover {
-      color: #eaf6f6;
-    }
-
-    .profile-image {
-      border-radius: 50%;
-      width: 300px;
-    }
-
-    .top-container {
-      background-color: #e4f9f5;
-      position: relative;
-      padding-top: 100px;
-    }
-
-    .middle-container {
-      /* background-color: salmon; */
-      margin: 100px 0;
-    }
-
-    .bottom-container {
-      background-color: #66bfbf;
-      padding: 50px 0 20px;
-    }
-
-    .skill-row {
-      width: 50%;
-      margin: 100px auto 100px auto;
-      text-align: left;
-    }
-
-    .pro {
-      text-decoration: underline;
-    }
-
-    .intro {
-      width: 30%;
-      margin: auto;
-    }
-
-    .contact-message {
-      width: 40%;
-      margin: 40px auto 60px;
-    }
-
-    .copyright {
-      color: #eaf6f6;
-      font-size: 0.75rem;
-      padding: 20px 0;
-    }
-
-    .top-cloud {
-      position: absolute;
-      right: 300px;
-      top: 40px;
-    }
-
-    .bottom-cloud {
-      position: absolute;
-      left: 250px;
-      bottom: 300px;
-    }
-
-    .code-img {
-      width: 25%;
-      float: left;
-      margin-right: 30px;
-    }
-
-    .chilli-img {
-      width: 50%;
-      margin-left: 30px;
-    }
-
-    .btn {
-      background: #11cdd4;
-      background-image: -webkit-linear-gradient(top, #11cdd4, #11999e);
-      background-image: -moz-linear-gradient(top, #11cdd4, #11999e);
-      background-image: -ms-linear-gradient(top, #11cdd4, #11999e);
-      background-image: -o-linear-gradient(top, #11cdd4, #11999e);
-      background-image: linear-gradient(to bottom, #11cdd4, #11999e);
-      -webkit-border-radius: 8;
-      -moz-border-radius: 8;
-      border-radius: 8px;
-      font-family: "Montserrat", sans-serif;
-      color: #ffffff;
-      font-size: 20px;
-      padding: 10px 20px 10px 20px;
-      text-decoration: none;
-    }
-
-    .btn:hover {
-      background: #30e3cb;
-      background-image: -webkit-linear-gradient(top, #30e3cb, #2bc4ad);
-      background-image: -moz-linear-gradient(top, #30e3cb, #2bc4ad);
-      background-image: -ms-linear-gradient(top, #30e3cb, #2bc4ad);
-      background-image: -o-linear-gradient(top, #30e3cb, #2bc4ad);
-      background-image: linear-gradient(to bottom, #30e3cb, #2bc4ad);
-      text-decoration: none;
-    }
-
-    .experience {
-      width: 700px;
-      margin: auto;
-    }
-
-    .experienceSub {
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      justify-content: center;
-      margin-bottom: 20px;
-    }
-
-    .workplace-image {
-      border-radius: 50%;
-      height: 200px;
-    }
-
-    .workplace-description {
-      margin-left: 50px;
-    }
-
-    .education {
-      width: 700px;
-      margin: auto;
-    }
-
-    .educationSub {
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      justify-content: center;
-      margin-bottom: 20px;
-    }
-
-    .education-image {
-      border-radius: 50%;
-      width: 200px;
-    }
-
-    .education-description {
-      margin-left: 50px;
-    }
-
-    .project {
-      width: 700px;
-      margin: auto;
-    }
-
-    .project-table {
-      margin: auto;
-    }
-
-    table,
-    tr,
-    th,
-    td {
-      border: 1px solid black;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body cz-shortcut-listen="true">
@@ -323,33 +117,11 @@
     </div>
     <div class="project">
       <h2>Project Portofolio</h2>
-      <table class="project-table">
-        <tr>
-          <th colspan="3">Chat App</th>
-        </tr>
-        <tr>
-          <td></td>
-          <td>Desc :</td>
-          <td>Maria Anders</td>
-        </tr>
-        <tr>
-          <td></td>
-          <td>Repo :</td>
-          <td> <a href="">ASDASD</a></td>
-        </tr>
-        <tr>
-          <td></td>
-          <td>Link :</td>
-          <td><a href="">-</a></td>
-
-        </tr>
-        <tr>
-          <td></td>
-          <td>Tech Stack :</td>
-          <td>Francisco Chang</td>
-        </tr>
-
-
+      <h3>Project Mobile Application</h3>
+      <table class="project-table-mobile" id="project-table-mobile">
+      </table>
+      <h3>Project Mobile Web</h3>
+      <table class="project-table-web" id="project-table-web">
       </table>
     </div>
   </div>
@@ -360,14 +132,13 @@
     <a class="btn" href="mailto:fikarsuwardi@gmail.com">CONTACT ME</a>
   </div>
 
-  <div id="demo"></div>
-
   <!-- Write your comments here -->
   <div class="bottom-container">
     <a class="footer-link" target=”_blank” href="https://www.linkedin.com/in/zulfikar-suwardi/">LinkedIn</a>
     <a class="footer-link" target=”_blank” href="https://github.com/fikarsuwardi">Github</a>
     <p class="copyright">Fikar Suwardi.</p>
   </div>
+
 
   <script src="main.js"></script>
 </body>
