add linkedin and github link

--- a/index.html
+++ b/index.html
@@ -104,6 +104,8 @@
           <li class="list-group-item">React & React Native</li>
           <li class="list-group-item">Vue</li>
           <li class="list-group-item">Flutter</li>
+          <li class="list-group-item">Laravel</li>
+
         </ul>
       </div>
       <div class="col-md-4">
@@ -114,6 +116,8 @@
           <li class="list-group-item">ORM Sequelize</li>
           <li class="list-group-item">Java & Spring</li>
           <li class="list-group-item">PostgreSql</li>
+          <li class="list-group-item">MongoDB</li>
+
         </ul>
       </div>
       <div class="col-md-4">
@@ -124,6 +128,7 @@
           <li class="list-group-item">Docker</li>
           <li class="list-group-item">Scrum Agile Methodology</li>
           <li class="list-group-item">CI/CD</li>
+          <li class="list-group-item">Jest</li>
         </ul>
       </div>
     </div>
@@ -254,10 +259,10 @@
     <div class="container mb-3">
       <div class="row">
         <div class="col">
-          <a href="https://www.linkedin.com/in/your-profile" target="_blank" class="text-white mx-2">
+          <a href="https://www.linkedin.com/in/zulfikar-suwardi/" target="_blank" class="text-white mx-2">
             <i class="fab fa-linkedin fa-2x"></i>
           </a>
-          <a href="https://github.com/your-profile" target="_blank" class="text-white mx-2">
+          <a href="https://github.com/fikarsuwardi" target="_blank" class="text-white mx-2">
             <i class="fab fa-github fa-2x"></i>
           </a>
         </div>
