--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             Bachelor's Degree of Mechanical Engineering
           </h5>
           <p class="card-text">Hasanuddin University</p>
-          <p class="card-text">October 2014 - May 2019</p>
+          <h6 class="card-text">October 2014 - May 2019</h6>
         </div>
       </div>
       <div class="card shadow mb-4">
@@ -157,7 +157,13 @@
         <div class="card-body">
           <h5 class="card-title">Full Stack Javascript Developer</h5>
           <p class="card-text">Hacktiv8</p>
-          <p class="card-text">March 2022 - July 2022</p>
+          <h6 class="card-text">March 2022 - July 2022</h6>
+          <p class="card-text">This 16-week programming and application development bootcamp consists of four phases,
+            covering fundamental
+            programming, application structure, database introduction, React & React Native, and MVP creation, with each
+            phase progressively teaching JavaScript basics, Fullstack JavaScript, client-server architecture, Vue,
+            microservices, and culminating in a final project presentation.
+          </p>
         </div>
       </div>
     </div>
@@ -168,40 +174,47 @@
     <h1 class="section-title">Experience</h1>
     <div class="card-deck">
       <div class="card">
-        <img src="images/wide-logo.jpeg" class="card-img-top" alt="wide-logo" />
+        <img src="images/dms.jpeg" class="card-img-top" alt="dms-logo" />
         <div class="card-body">
-          <h5 class="card-title">PT Wide Technologies Indonesia</h5>
-          <p class="card-title">September 2022 - Now</p>
-          <h6 class="card-title">Software Mobile Engineer</h6>
+          <h5 class="card-title">PT. Dynamics Management Solution</h5>
+          <p class="card-title">June 2024 - Current</p>
+          <h6 class="card-title">Flutter Developer</h6>
           <p class="card-text">
-            I design, develop, and maintain software applications to meet user
-            requirements and enhance functionality. My responsibilities
-            include writing clean and efficient code, debugging and
-            troubleshooting issues, and performing regular testing to ensure
-            software reliability. I collaborate with cross-functional teams to
-            gather requirements and deliver solutions, and I stay updated with
-            the latest industry trends and technologies to continuously
-            improve my skills. Additionally, I document code and processes,
-            ensuring seamless knowledge transfer and maintenance.
+            As a Flutter Developer, I am responsible for developing and maintaining a Human Resource Information System
+            (HRIS) mobile application. My main tasks include:
+            Implementing user-friendly UI/UX designs.
+            Writing efficient, maintainable code in Dart and Flutter.
+            Integrating HRIS features like employee management and payroll.
+            Ensuring app responsiveness on Android and iOS.
+            Connecting the app with backend services using RESTful APIs.
+            Identifying and fixing bugs.
+            Participating in team meetings and project planning.
+            Communicating effectively with team members and stakeholders.
+
           </p>
         </div>
       </div>
       <div class="card">
-        <img src="images/cube-logo.jpeg" class="card-img-top" alt="cube-logo" />
+        <img src="images/wide-logo.jpeg" class="card-img-top" alt="wide-logo" />
         <div class="card-body">
-          <h5 class="card-title">Cube Interior</h5>
-          <p class="card-title">September 2021 - Maret 2022</p>
-          <h6 class="card-title">Production Staff</h6>
+          <h5 class="card-title">PT Wide Technologies Indonesia</h5>
+          <p class="card-title">September 2022 - Current</p>
+          <h6 class="card-title">Software Mobile Engineer</h6>
           <p class="card-text">
-            I assist in manufacturing and assembling furniture, ensuring all
-            products meet quality standards. I handle materials safely,
-            perform routine maintenance on equipment, and adhere to health and
-            safety regulations. I maintain accurate production records, track
-            inventory, and collaborate with team members to meet production
-            targets.
+            As a Software Engineer, I am responsible for developing and maintaining a Digital Mobile Banking Platform.
+            My key tasks include:
+            Implementing user-friendly and secure features.
+            Writing efficient and maintainable code.
+            Connecting with banking systems and APIs.
+            Ensuring data synchronization and security.
+            Identifying and fixing bugs.
+            Working closely with cross-functional teams.
+            Communicating effectively with stakeholders.
+
           </p>
         </div>
       </div>
+
       <div class="card">
         <img src="images/wings-logo.png" class="card-img-top" alt="wings-logo" />
         <div class="card-body">
@@ -209,10 +222,19 @@
           <p class="card-title">November 2019 - September 2021</p>
           <h6 class="card-title">Production Supervisor</h6>
           <p class="card-text">
-            Manage the workflow by assigning responsibilities and preparing
-            schedules. Guide and coach employees, monitoring their
-            productivity. Establish daily objectives and communicate them to
-            employees.
+            As a Production Supervisor at food and beverage company, I am responsible for overseeing and managing the
+            production processes. My key tasks include:
+            Supervising production staff and ensuring adherence to safety protocols.
+            Providing training and support to team members.
+            Monitoring production lines to ensure efficiency and quality.
+            Managing schedules and workflow to meet production targets.
+            Implementing and maintaining quality assurance standards.
+            Conducting inspections and resolving any issues promptly.
+            Managing inventory and supplies to ensure smooth operations.
+            Coordinating with other departments for resource allocation.
+            By performing these tasks, I ensure the efficient and high-quality production of beverages, contributing to
+            the overall success of the company.
+
           </p>
         </div>
       </div>
